Fix: do not show pending status if swap order is expired (#3662)
* Fix: tx summary pending and expired status overlap

* remove duplicate fix

--- a/src/components/transactions/TxSummary/styles.module.css
+++ b/src/components/transactions/TxSummary/styles.module.css
@@ -13,11 +13,10 @@
   gap: var(--space-2);
   align-items: center;
   white-space: nowrap;
-  grid-template-columns: var(--grid-nonce) var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-confirmations)
-  var(--grid-actions)
-  var(
-      --grid-status
-    );
+  grid-template-columns:
+    var(--grid-nonce) var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-confirmations)
+    var(--grid-actions)
+    var(--grid-status);
   grid-template-areas: 'nonce type info date confirmations  status actions';
 }
 
